src/tui/views/snapshots/whk__tui__views__snapshot_tests__chrome_compact_100x18.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 100, 18).backend()"
---
" Webhooker v[version] · acme · pro                                                                      "
"┌──────────────┐┌ Stats ⠋ ─────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││range  24h   7d   30d                                                             │"
"│  Destinations││                                                                                  │"
"│  Connections ││                                                                                  │"
"│  Events      ││                                                                                  │"
"│  DLQ         ││                                                                                  │"
"│▸ Stats       ││                                                                                  │"
"│  Relay       ││                                                                                  │"
"│  Settings    ││                                                                                  │"
"│              ││                                                                                  │"
"│              ││                                                                                  │"
"│              ││                                                                                  │"
"│              ││                                                                                  │"
"│              ││                                                                                  │"
"│              ││                                                                                  │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘"
" h/l range · 1-3 24h 7d 30d · r refresh · ? help · q quit                                           "
