src/tui/views/snapshots/whk__tui__views__snapshot_tests__confirm_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 80, 24).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Stats ⠋ ─────────────────────────────────────────────────────────────────────┐"
"│range  24h   7d   30d                                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                ┌ Confirm ──────────────────────────────────┐                 │"
"│                │Rotate the ingest token of stripe-prod?    │                 │"
"│                │                                           │                 │"
"│                │y yes   n no                               │                 │"
"│                └───────────────────────────────────────────┘                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" y confirm · n cancel                                                           "
