src/tui/views/snapshots/whk__tui__views__snapshot_tests__confirm_typed_name_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Sources ─────────────────────────────────────────────────────────────────────┐"
"│▸ ●  stripe-prod                       1 204 events  2 conns   verify: stripe │"
"│  ●  github-ci                           318 events  1 conn    verify: github │"
"│  ◐  shopify-old                          12 events  0 conns   paused         │"
"│                                                                              │"
"│                     ┌ Confirm ─────────────────────────┐                     │"
"│                     │Move stripe-prod to the trash?    │                     │"
"│                     │                                  │                     │"
"│                     │Type stripe-prod to confirm:      │                     │"
"│                     │> stripe                          │                     │"
"│                     │                                  │                     │"
"│                     │enter confirm   esc cancel        │                     │"
"│                     └──────────────────────────────────┘                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter confirm · esc cancel                                              3s ago "
