src/tui/views/snapshots/whk__tui__views__snapshot_tests__connection_detail_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Connection ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││Source        stripe-prod                                                                             │"
"│  Destinations││Destination   billing-worker                                                                          │"
"│▸ Connections ││Enabled       ● yes                                                                                   │"
"│  Events      ││Created       2026-09-01 10:00:00                                                                     │"
"│  DLQ         ││ID            0198c9f0-0000-7000-8000-0000000000c1                                                    │"
"│  Stats       ││                                                                                                      │"
"│  Relay       ││Filter rules                                                                                          │"
"│  Settings    ││  {                                                                                                   │"
"│              ││    "all": [                                                                                          │"
"│              ││      {                                                                                               │"
"│              ││        "op": "eq",                                                                                   │"
"│              ││        "path": "type",                                                                               │"
"│              ││        "value": "invoice.paid"                                                                       │"
"│              ││      }                                                                                               │"
"│              ││    ]                                                                                                 │"
"│              ││  }                                                                                                   │"
"│              ││                                                                                                      │"
"│              ││Transformation                                                                                        │"
"│              ││  none                                                                                                │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" e edit · y copy · E disable · D delete · j/k scroll · esc back · r refresh · ? help                             3s ago "
