src/tui/views/snapshots/whk__tui__views__snapshot_tests__connection_detail_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Connection ──────────────────────────────────────────────────────────────────┐"
"│Source        stripe-prod                                                     │"
"│Destination   billing-worker                                                  │"
"│Enabled       ● yes                                                           │"
"│Created       2026-09-01 10:00:00                                             │"
"│ID            0198c9f0-0000-7000-8000-0000000000c1                            │"
"│                                                                              │"
"│Filter rules                                                                  │"
"│  {                                                                           │"
"│    "all": [                                                                  │"
"│      {                                                                       │"
"│        "op": "eq",                                                           │"
"│        "path": "type",                                                       │"
"│        "value": "invoice.paid"                                               │"
"│      }                                                                       │"
"│    ]                                                                         │"
"│  }                                                                           │"
"│                                                                              │"
"│Transformation                                                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" e edit · y copy · E disable · D delete · j/k scroll · esc back · r refr 3s ago "
