src/tui/views/snapshots/whk__tui__views__snapshot_tests__connections_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Connections ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││▸ ●  stripe-prod → billing-worker                                                 filter              │"
"│  Destinations││  ●  stripe-prod → audit-log                                                                          │"
"│▸ Connections ││  ○  github-ci → billing-worker                                                                       │"
"│  Events      ││                                                                                                      │"
"│  DLQ         ││                                                                                                      │"
"│  Stats       ││                                                                                                      │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · n new · e edit · E disable · D delete · r refresh · ? help · q quit                                3s ago "
