src/tui/views/snapshots/whk__tui__views__snapshot_tests__connections_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Connections ─────────────────────────────────────────────────────────────────┐"
"│▸ ●  stripe-prod → billing-worker                         filter              │"
"│  ●  stripe-prod → audit-log                                                  │"
"│  ○  github-ci → billing-worker                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · n new · e edit · E disable · D delete · r refresh · ? help 3s ago "
