src/tui/views/snapshots/whk__tui__views__snapshot_tests__copy_modal_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 80, 24).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ stripe-prod ─────────────────────────────────────────────────────────────────┐"
"│1 Overview   2 Live   3 Events   4 Connections   5 DLQ                        │"
"│                                                                              │"
"│Ingest URL    https://app.webhooker.eu/in/6b225n04u5kmyg                      │"
"│Status        ● active                                                        │"
"│Description ┌ Copy ─────────────────────────────────────────────┐             │"
"│Color       │Select the ingest URL with the mouse and copy it:  │             │"
"│Verification│                                                   │             │"
"│Response    │https://app.webhooker.eu/in/6b225n04u5kmyg         │             │"
"│Created     │                                                   │             │"
"│ID          │esc close                                          │             │"
"│            │                                                   │             │"
"│            └───────────────────────────────────────────────────┘             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" esc close                                                               3s ago "
