src/tui/views/snapshots/whk__tui__views__snapshot_tests__destination_detail_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ billing-worker ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││URL           https://billing.internal/hooks                                                          │"
"│▸ Destinations││Status        ● active                                                                                │"
"│  Connections ││Headers       X-Env: prod                                                                             │"
"│  Events      ││Auth          hmac (secret ***)                                                                       │"
"│  DLQ         ││Timeout       10000 ms                                                                                │"
"│  Stats       ││Retries       30s · 2m · 10m · 1h · 4h                                                                │"
"│  Relay       ││Circuit       closed                                                                                  │"
"│  Settings    ││Created       2026-09-01 10:00:00                                                                     │"
"│              ││ID            0198c9f0-0000-7000-8000-0000000000d1                                                    │"
"│              ││                                                                                                      │"
"│              ││Fed by                                                                                                │"
"│              ││  ● stripe-prod                                                                                       │"
"│              ││  ○ github-ci                                                                                         │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" e edit · y copy · P pause · D delete · j/k scroll · esc back · r refresh · ? help                               3s ago "
